plugins/kotlin/idea/tests/testData/highlighterMetaInfo/unresolved/unresolvedLabel.kt.highlighting
// ALLOW_ERRORS
// HIGHLIGHTER_ATTRIBUTES_KEY

class <!HIGHLIGHTING("textAttributesKey='KOTLIN_CLASS'; highlightingTextAttributesKey='INFORMATION_ATTRIBUTES'")!>A<!> {
    <!HIGHLIGHTING("textAttributesKey='KOTLIN_KEYWORD'; highlightingTextAttributesKey='INFORMATION_ATTRIBUTES'")!>init<!> {
        this<!HIGHLIGHTING("severity='ERROR'; descr='[UNRESOLVED_REFERENCE] Unresolved reference: @B'; highlightingTextAttributesKey='WRONG_REFERENCES_ATTRIBUTES'"), HIGHLIGHTING("textAttributesKey='KOTLIN_LABEL'; highlightingTextAttributesKey='INFORMATION_ATTRIBUTES'")!>@B<!>
    }
}
